--- a/myapp/mandats/templates/base_generic.html
+++ b/myapp/mandats/templates/base_generic.html
@@ -4,58 +4,88 @@
   {% block title %}{% endblock %}
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <!-- Add additional CSS in static file -->
-  {% load static %}
-  <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-    {% load static %}
-  <img src="{% static 'images/logo_trésor.jpg' %}" alt="Trésor" style="width:450px;height:400px;">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-sm-2">
-      {% block sidebar %}
-        <ul class="sidebar-nav">
-          <li><a href="{% url 'index' %}">Home</a></li>
-          <li><a href="{% url 'mandats' %}">Mandats</a></li>
-          <li><a href="{% url 'fournisseurs' %}">Fournisseurs</a></li>
+
+<div class="container">
+  <div id="home" style="margin-top:20px">
+    <p>
+      <span class="text-left">
+          <a class="navbar-brand" href="#"><a class="navbar-brand" href="#">
+              {% load static %}
+              <img src="{% static 'images/logo_trésor.jpg' %}" width="30" height="30" alt="Trésor">
+            </a></a>
+      </span>
+      <span class="float-right" style="margin-right: 20px;">
+          <i class="fa fa-user-circle" aria-hidden="true"></i>
+      </span>
+    </p>
+  </div>
+</div>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+    <h6 class="card-header">Mandat Etat</h6>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        {% block sidebar %}
+        <ul class="navbar-nav" style="margin-left: 195px;">
             {% if user.is_authenticated %}
-            <li>User: {{ user.get_username }}</li>
-            <li><a href="{% url 'mandat-utilisateur' %}">Mandats</a></li>
-            <li><a href="{% url 'virement-utilisateur' %}">Virements</a></li>
-            <li><a href="{% url 'view_profile'%}?next={{request.path}}">profil</a></li>
-            <li><a href="{% url 'edit_profile' %}?next={{request.path}}">Editer profil</a></li>
-            <li><a href="{% url 'password_change'%}?next={{request.path}}">Changer mot de passe</a></li>
-            <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>
-           <li><a href="{% url 'contact_foundation' %}">Contact us</a></li>
+            <li class="nav-item ">
+                <a class="nav-link" href="{% url 'mandat-utilisateur' %}">Mandats</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="{% url 'virement-utilisateur' %}" style="border-left: 2px solid #333;">Virements</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'view_profile'%}?next={{request.path}}" style="border-left: 2px solid #333;">Profil</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'contact_foundation' %}" style="border-left: 2px solid #333;">Messages</a>
+            </li>
+            <ul class="navbar-nav mr-auto">
+          <div class="dropdown" style="margin-left: 340px;" >
+              <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+               {{ user.get_username }}
+              </a>
+
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                <a class="dropdown-item" href="#">Action</a>
+                <a class="dropdown-item" href="#">Another action</a>
+                <a class="dropdown-item" href="#">Something else here</a>
+              </div>
+            </div>
+      </ul>
             {% else %}
-            <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>
-            <li><a href="{% url 'signup'%}?next={{request.path}}">S'inscrire</a></li>
+             <li class="nav-item">
+              <a class="nav-link" href="{% url 'login'%}?next={{request.path}}" style="border-left: 2px solid #333;">Connexion</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'signup'%}?next={{request.path}}" style="border-left: 2px solid #333;">S'inscrire</a>
+            </li>
             {% endif %}
         </ul>
      {% endblock %}
-      </div>
-      <div class="col-sm-10 ">{% block content %}{% endblock %}
-      {% block pagination %}
-  {% if is_paginated %}
-    <div class="pagination">
-      <span class="page-links">
-        {% if page_obj.has_previous %}
-          <a href="{{ request.path }}?page={{ page_obj.previous_page_number }}">precedent</a>
-        {% endif %}
-        <span class="page-current">
-          <p>Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.</p>
-        </span>
-        {% if page_obj.has_next %}
-          <a href="{{ request.path }}?page={{ page_obj.next_page_number }}">suivant</a>
-        {% endif %}
-      </span>
-    </div>
-  {% endif %}
-{% endblock %}
-      </div>
     </div>
   </div>
+  </nav>
+
+<div class="container">
+{% block content %}{% endblock %}
+
+</div>
+
+
+
+<!--javascript-->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
