--- a/myapp/mandats/templates/mandats/login1.html
+++ b/myapp/mandats/templates/mandats/login1.html
@@ -4,23 +4,21 @@
 	<title>Login V1</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-    {% load static %}
+<!--===============================================================================================-->	
+	<link rel="icon" type="image/png" href="images/icons/favicon.ico"/>
 <!--===============================================================================================-->
-	<link rel="icon" type="image/png" href="{% static 'mandats/images/icons/favicon.ico' %}"/>
+	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="{% static 'mandats/vendor/bootstrap/css/bootstrap.min.css' %}">
+	<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css"
-          href="{% static 'mandats/fonts/font-awesome-4.7.0/css/font-awesome.min.css' %}">
+	<link rel="stylesheet" type="text/css" href="vendor/animate/animate.css">
+<!--===============================================================================================-->	
+	<link rel="stylesheet" type="text/css" href="vendor/css-hamburgers/hamburgers.min.css">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="{% static 'mandats/vendor/animate/animate.css' %}">
+	<link rel="stylesheet" type="text/css" href="vendor/select2/select2.min.css">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="{% static 'mandats/vendor/css-hamburgers/hamburgers.min.css' %}">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="{% static 'mandats/vendor/select2/select2.min.css' %}">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="{% static 'mandats/css/util.css' %}">
-	<link rel="stylesheet" type="text/css" href="{% static 'mandats/css/main.css' %}">
+	<link rel="stylesheet" type="text/css" href="css/util.css">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 <!--===============================================================================================-->
 </head>
 <body>
@@ -29,30 +27,16 @@
 		<div class="container-login100">
 			<div class="wrap-login100">
 				<div class="login100-pic js-tilt" data-tilt>
-                    {% load static %}
-                    <img src="{% static 'mandats/images/logo_tresor.jpg' %}" alt="IMG" >
+					<img src="images/img-01.png" alt="IMG">
 				</div>
-                {% if form.errors %}
-                  <p>Votre nom d'utilisateur et votre mot de passe ne correspondent pas. Veuillez réessayer.</p>
-                {% endif %}
 
-                {% if next %}
-                  {% if user.is_authenticated %}
-                    <p>Votre compte ne vous permet pas d'accéder à cette page. Procéder,
-                     veuillez vous connecter avec un compte ayant accès</p>
-                  {% else %}
-                    <p>Veuillez vous connecter pour voir cette page.</p>
-                  {% endif %}
-                {% endif %}
-                <form class="login100-form validate-form" action="{% url 'login' %}">
-                    {% csrf_token %}
+				<form class="login100-form validate-form">
 					<span class="login100-form-title">
-						Connexion Fournisseur
+						Member Login
 					</span>
 
 					<div class="wrap-input100 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
-						<input class="input100" type="text"  placeholder="nom d'utilisateur" {{
-                        form.username }}>
+						<input class="input100" type="text" name="email" placeholder="Email">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-envelope" aria-hidden="true"></i>
@@ -60,8 +44,7 @@
 					</div>
 
 					<div class="wrap-input100 validate-input" data-validate = "Password is required">
-						<input class="input100" type="password" name="pass" placeholder="Password" {{
-                               form.password }}>
+						<input class="input100" type="password" name="pass" placeholder="Password">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-lock" aria-hidden="true"></i>
@@ -69,24 +52,22 @@
 					</div>
 					
 					<div class="container-login100-form-btn">
-						<button class="login100-form-btn" value="login">
+						<button class="login100-form-btn">
 							Login
 						</button>
-                        <input type="hidden" name="suivant" value="{{ next }}" />
-
 					</div>
 
 					<div class="text-center p-t-12">
 						<span class="txt1">
 							Forgot
 						</span>
-						<a class="txt2" href="{% url 'password_reset' %}">
-							Mot de passe perdu?
+						<a class="txt2" href="#">
+							Username / Password?
 						</a>
 					</div>
 
 					<div class="text-center p-t-136">
-						<a class="txt2" href="{% url 'signup'%}">
+						<a class="txt2" href="#">
 							Create your Account
 							<i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
 						</a>
@@ -96,25 +77,25 @@
 		</div>
 	</div>
 	
+	
 
-
-	{% load static %}
+	
 <!--===============================================================================================-->	
-	<script src="{% static 'mandats/vendor/jquery/jquery-3.2.1.min.js' %}"></script>
+	<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
 <!--===============================================================================================-->
-	<script src="{% static 'mandats/vendor/bootstrap/js/popper.js' %}"></script>
-	<script src="{% static 'mandats/vendor/bootstrap/js/bootstrap.min.js' %}"></script>
+	<script src="vendor/bootstrap/js/popper.js"></script>
+	<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 <!--===============================================================================================-->
-	<script src="{% static 'mandats/vendor/select2/select2.min.js' %}"></script>
+	<script src="vendor/select2/select2.min.js"></script>
 <!--===============================================================================================-->
-	<script src="{% static 'mandats/vendor/tilt/tilt.jquery.min.js' %}"></script>
+	<script src="vendor/tilt/tilt.jquery.min.js"></script>
 	<script >
 		$('.js-tilt').tilt({
 			scale: 1.1
 		})
 	</script>
 <!--===============================================================================================-->
-	<script src="{% static 'mandats/js/main.js' %}"></script>
+	<script src="js/main.js"></script>
 
 </body>
 </html>
