--- a/myapp/mandats/templates/mandats/virement_list_utilisateur_user.html
+++ b/myapp/mandats/templates/mandats/virement_list_utilisateur_user.html
@@ -1,20 +1,71 @@
 {% extends "base_generic.html" %}
 
 {% block content %}
-    <h1>Virements</h1>
+<div class="container">
+  <div class="row">
+    <div class="col">
+        <div class="card">
+            <h5 class="card-header">Liste des virements</h5>
 
-    {% if virement_list %}
-    <ul>
-
-      {% for vir in virement_list %}
-      <li class="{% if vir.traite == 0 or vir.traite == 1 %}text-danger{% endif %}">
-        <a href="{% url 'virement-detail' vir.pk %}">{{vir.reference}}</a> ({{ vir.montant }})
-
-      </li>
-      {% endfor %}
-    </ul>
-
-    {% else %}
-      <p>Pas de virements disponible</p>
-    {% endif %}
+          </div>
+    </div>
+  </div>
+</div>
+  <div class="container">
+    <div class="float-left">
+      <p>3 virements</p>
+    </div>
+    <div class="float-right">
+      <p>
+        <h5>Rechercher un virement</h5>
+        <nav class="navbar navbar-light bg-light">
+            <form class="form-inline">
+              <input class="form-control mr-sm-2" type="search" placeholder="Rechercher" aria-label="Search">
+              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Rechercher</button>
+            </form>
+          </nav>
+      </p>
+    </div>
+  </div>
+  <div class="container" style="margin-top:140px">
+  <div class="row">
+    <div class="col">
+        {% if virement_list %}
+        <table class="table table-striped table-bordered" style="font-size: 12px;">
+            <thead>
+              <tr>
+                <th>N° mandat</th>
+                <th>Motif</th>
+                <th>Fournisseur</th>
+                <th>Compte fournisseur</th>
+                <th>Montant</th>
+                <th>Date d'ordre</th>
+                <th>Date de paiement</th>
+                <th>Actions</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                  {% for vir in virement_list %}
+                <th class="{% if vir.traite == 0 or vir.traite == 1 %}text-danger{% endif %}">{{vir.mandat.ide_piece}}</th>
+                <td>{{vir.mandat.objet}}</td>
+                <td>{{vir.fournisseur.prenom}}</td>
+                <td>{{vir.rib_beneficiaire}}</td>
+                <td>{{vir.montant}}</td>
+                <td>{{vir.date_ordre}}</td>
+                <td>{{vir.date_paiement}}</td>
+                  {% endfor %}
+                <td>
+                  <button type="button" class="btn btn-outline-primary btn-sm">Consulter</button>
+                  <button type="button" class="btn btn-outline-primary btn-sm">Exporter</button>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        {% else %}
+        <p>Pas de virements disponible</p>
+        {% endif %}
+    </div>
+  </div>
+</div>
 {% endblock %}
